# gatkeeper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_FR.md  gatkeeper.toml  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  release.yml
crates/gatkeeper-agents/: Cargo.toml
crates/gatkeeper-agents/src/: compliance_agent.rs  context.rs  lib.rs  logic_agent.rs  orchestrator.rs  performance_agent.rs  secret_agent.rs  security_agent.rs  supply_chain_agent.rs  traits.rs
crates/gatkeeper-agents/src/compliance/: mod.rs
crates/gatkeeper-agents/src/logic/: mod.rs
crates/gatkeeper-agents/src/performance/: mod.rs
crates/gatkeeper-agents/src/secrets/: detector.rs  mod.rs
crates/gatkeeper-agents/src/security/: crypto.rs  injections.rs  mod.rs  owasp.rs
crates/gatkeeper-agents/src/supply_chain/: dependencies.rs  mod.rs
crates/gatkeeper-agents/tests/: agents_test.rs
crates/gatkeeper-cli/: Cargo.toml
crates/gatkeeper-cli/src/: main.rs  output.rs
crates/gatkeeper-cli/src/commands/: dna.rs  init.rs  mod.rs  report.rs  scan.rs  status.rs  subconscious.rs  whatif.rs
crates/gatkeeper-core/: Cargo.toml
crates/gatkeeper-core/src/: config.rs  error.rs  finding.rs  lib.rs  project.rs  report.rs  risk.rs  scan.rs  storage.rs
crates/gatkeeper-core/src/report/: findings.rs  gat.rs  mod.rs  risk_score.rs
crates/gatkeeper-core/tests/: integration_test.rs
crates/gatkeeper-dna/: Cargo.toml
crates/gatkeeper-dna/src/: baseline.rs  fingerprint.rs  invariants.rs  lib.rs  patterns.rs  store.rs
crates/gatkeeper-dna/tests/: dna_test.rs
crates/gatkeeper-parser/: Cargo.toml
crates/gatkeeper-parser/src/: ast.rs  languages.rs  lib.rs  parse.rs  walker.rs
crates/gatkeeper-parser/src/languages/: mod.rs
crates/gatkeeper-parser/tests/: parser_test.rs
crates/gatkeeper-subconscious/: Cargo.toml
crates/gatkeeper-subconscious/src/: engine.rs  jaune.rs  lib.rs  rouge.rs  scheduler.rs  verte.rs
crates/gatkeeper-subconscious/src/chaos/: injector.rs  mod.rs
crates/gatkeeper-subconscious/src/evolution/: generator.rs  mod.rs
crates/gatkeeper-subconscious/src/threat/: mod.rs  simulator.rs
crates/gatkeeper-subconscious/tests/: subconscious_test.rs
docs/: CONTRIBUTOR_CALL.md  READY_TO_POST.md  REDDIT_HN_POSTS.md
gatkeeper-lenses/: Cargo.toml
gatkeeper-lenses/src/: intent.rs  lib.rs  time_machine.rs
migrations/: 001_init.sql  002_dna_tables.sql
scripts/: generate-pdf-fr.mjs  generate-pdf.mjs
templates/: .gat_template.toml
