[workspace]
resolver = "2"
members = [
    "crates/gatkeeper-cli",
    "crates/gatkeeper-core",
    "crates/gatkeeper-parser",
    "crates/gatkeeper-agents",
    "crates/gatkeeper-subconscious",
    "crates/gatkeeper-dna",
    "gatkeeper-lenses",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/karlalbert152-sys/gatkeeper"
description = "AI-Native Security Intelligence Platform with a Subconscious Engine"
authors = ["Karla Albert <karlalbert152@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
rayon = "1.8"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tree-sitter = "0.22"
