[package]
name = "gatkeeper-lenses"
version.workspace = true
edition.workspace = true
description = "GatKeeper Lenses — intent comprehension and code archaeology"

[dependencies]
gatkeeper-core = { path = "../crates/gatkeeper-core" }
gatkeeper-parser = { path = "../crates/gatkeeper-parser" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
