[package]
name = "gatkeeper-agents"
version.workspace = true
edition.workspace = true
description = "Multi-agent AI analysis system — 6 specialized security agents"

[dependencies]
gatkeeper-core = { path = "../gatkeeper-core" }
gatkeeper-parser = { path = "../gatkeeper-parser" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
