[package]
name = "gatkeeper"
version.workspace = true
edition.workspace = true
description = "GatKeeper CLI — AI-Native Security Intelligence Platform"

[[bin]]
name = "gatkeeper"
path = "src/main.rs"

[dependencies]
gatkeeper-core = { path = "../gatkeeper-core" }
gatkeeper-parser = { path = "../gatkeeper-parser" }
gatkeeper-agents = { path = "../gatkeeper-agents" }
gatkeeper-subconscious = { path = "../gatkeeper-subconscious" }
tokio.workspace = true
clap.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
