[package]
name = "gatkeeper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for GatKeeper"

[[bin]]
name = "gatkeeper"
path = "src/main.rs"

[dependencies]
gatkeeper-core = { path = "../gatkeeper-core" }
gatkeeper-parser = { path = "../gatkeeper-parser" }
gatkeeper-agents = { path = "../gatkeeper-agents" }
gatkeeper-dna = { path = "../gatkeeper-dna" }
gatkeeper-subconscious = { path = "../gatkeeper-subconscious" }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
toml.workspace = true
