[package]
name = "gatkeeper-dna"
version.workspace = true
edition.workspace = true
description = "DNA Engine — long-term codebase memory and fingerprinting"

[dependencies]
gatkeeper-core = { path = "../gatkeeper-core" }
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2 = "0.10"
