[package]
name = "gatkeeper-dna"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DNA Engine: codebase fingerprinting and memory"

[dependencies]
gatkeeper-core = { path = "../gatkeeper-core" }
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
glob.workspace = true
