[package]
name = "gatkeeper-subconscious"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Subconscious Engine: Rouge/Jaune/Verte threat simulation"

[dependencies]
gatkeeper-core = { path = "../gatkeeper-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
rand = "0.8"
